--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <version>2.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
