--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
             <version>1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baidu.aip</groupId>
+            <artifactId>java-sdk</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
