--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,17 @@
             <version>2.4</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>dance</groupId>-->
+            <!--<artifactId>Distributed-Kit</artifactId>-->
+            <!--<version>0.0.1</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>1.1.1</version>
+        </dependency>
 
     </dependencies>
 
@@ -113,8 +124,5 @@
             </plugin>
         </plugins>
     </build>
-
-
-
 
 </project>
